qnode41_prod_arch_env/QND41-ARCH-1/qnode41_app/templates/03-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qnode41-app
  namespace: qnode41
  labels:
    app: qnode41-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qnode41-app
  template:
    metadata:
      namespace: qnode41
      labels:
        app: qnode41-app
    spec:
      #restartPolicy: Always
      containers:
        - name: qnode41-app
          image: smartquail/qnode41_app:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 9000
          resources:
            requests:
               cpu: "100m"
               memory: "128Mi"
            limits:
               cpu: "500m"
               memory: "256Mi"
