qnode41_prod_arch_env/QND41-ARCH-1/qnode41_app/templates/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qnode41-svc
  namespace: qnode41
  labels:
    app: qnode41-app
spec:
 ports:
 - protocol: TCP
   port: 80
   targetPort: 9000
 selector:
   app: qnode41-app
 type: NodePort
