qnode41_prod_arch_env/QND41-ARCH-1/qnode41_app/templates/06-QNODE41-INGRESS.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qnode41-ingress
  namespace: qnode41
 # annotations:
 #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
   - host: app.smartquail.io
     http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
           service:
             name: qnode41-svc
             port:
               number: 80
